# ssdc-rm-ddl

./: .coverage  .dockerignore  .gitignore  .travis.yml  Dockerfile  Makefile  Pipfile  README.md  build_groundzero_ddl.sh  build_init_script.sh  check-for-unbuilt-ddl-changes.sh  check-for-unbuilt-entity-changes.sh  check_sql_files_exist.sh  cloudbuild.yaml  config.py  docker-compose-dev-postgres.yml  exclude-pmd.properties  manually_applied_indexes.sql  patch_database.py  pom.xml  rollback_database.py  run_sql_file_to_case_db.sh  test_rollback_scripts.py  wait_for_docker_postgres.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
dev-common-postgres-image/: Dockerfile  dev-init.sql  init.sql
groundzero_ddl/: casev3.sql  ddl_version.sql  destroy_schemas.sql  exceptionmanager.sql  ground_zero_and_restore_user_pemissions.sh  rebuild_from_ground_zero.sh  uacqid.sql
integration-testing-image/: Dockerfile
patches/: 1000_increase_length_of_export_file_row.sql  1000_update_CRIS_export_file_templates.sql  100_add_created_by_to_action_rule_table.sql  100_add_indexs.sql  100_add_jobType_column_toJob.sql  100_add_print_file_row_table.sql  100_add_processedby_and_cancelledby_to_job_table.sql  100_add_sample_gin_index.sql  100_add_skipping_user_column_to_quarantined_messages.sql  300_add_email.sql  (+53 more)
ssdc-rm-python-common-entity-model/: pyproject.toml  setup.py
ssdc-rm-python-common-entity-model/src/entity/: case.py  casev3_schema.py  collection_exercise.py  common_entity_model.py  ddlversion_entity.py  event_type.py  exceptionmanager_entity.py  survey.py  uacqid_entity.py
(+115 files in other folders)
